(chores) use isBlank for testing blank Strings
- This avoids the overhead of creating a new String in the worst case
- isBlank is usually a bit more efficient