@@ -29,7 +29,7 @@ public final class Strings {
     }
 
     public static boolean isEmpty(String s) {
-        return s == null || s.trim().isEmpty();
+        return s == null || s.isBlank();
     }
 
     /**
